--- a/my-cyber-blog/src/_data/metadata.yaml
+++ b/my-cyber-blog/src/_data/metadata.yaml
@@ -1,12 +1,11 @@
 # Site Metadata
-title: Cyber Banana
-description: A cyberpunk-themed developer portfolio starter with 11ty and Tailwind CSS. Fast, dark, and beautifully designed.
-url: https://cyber-banana-starter.freshjuice.dev
+title: black_kirby
+description: justin is a kirby
 language: en
-author: FreshJuice
-email: contact@freshjuice.dev
+author: Fermionictrees
+email: contact@fermionictrees.dev
 
 # Social/SEO
-twitter: "@FreshJuiceDev"
+twitter: "@fermionicplants"
 image: /assets/images/og-placeholder.png
 themeColor: "#FFE500"
