--- a/my-cyber-blog/src/_data/metadata.yaml
+++ b/my-cyber-blog/src/_data/metadata.yaml
@@ -1,6 +1,6 @@
 # Site Metadata
-title: black_kirby
-description: justin is a kirby.
+title: fermionicplants
+description: "justin is a kirby."
 language: en
 author: Fermionictrees
 email: contact@fermionictrees.dev
