--- a/my-cyber-blog/src/_data/socials.yaml
+++ b/my-cyber-blog/src/_data/socials.yaml
@@ -1,7 +1,7 @@
 # Social Media Links
 - platform: x
   label: X (Twitter)
-  url: https://x.com/FreshJuiceDev
+  url: https://github.com/fermionicplants
 
 - platform: github
   label: GitHub
@@ -9,4 +9,4 @@
 
 - platform: linkedin
   label: LinkedIn
-  url: https://www.linkedin.com/company/freshjuice
+  url: https://github.com/fermionicplants
