--- a/my-cyber-blog/src/_data/metadata.yaml
+++ b/my-cyber-blog/src/_data/metadata.yaml
@@ -8,4 +8,4 @@ email: contact@fermionictrees.dev
 # Social/SEO
 twitter: "@fermionicplants"
 image: /assets/images/kirbs.png
-themeColor: "#FFE500"
+themeColor: "#fde042"
